# narwhal

./: .gitignore  Cargo.toml  README.md
examples/: draw_test.rs  render_test.rs
platform/: Cargo.toml  build.rs
platform/src/: event.rs  lib.rs
platform/src/cocoa/: NCAppDelegate.h  NCAppDelegate.m  NCWindow.h  NCWindow.m  available.h  mod.rs  sys.rs
platform/src/wayland/: input_handler.rs  mod.rs
src/: lib.rs  util.rs
src/data/: camera.rs  cgmath_ext.rs  color.rs  drawable.rs  mod.rs  path.rs  shape.rs  value.rs  weight.rs
src/eval/: mod.rs
src/node/: graph.rs  mod.rs  node.rs
src/node/defs/: camera.rs  composite.rs  gaussian.rs  mask.rs  mod.rs
src/render/: mod.rs  presenter.rs  renderer.rs  shape.rs  stroke_tess.rs  swapchain_renderer.rs  tex_comp.rs  texture.rs
src/render/fx/: color_transform.rs  gaussian.rs  mask.rs  mod.rs
src/shaders/: color_transform.comp  composite_tex.frag  composite_tex.vert  gaussian_blur.comp  mask.comp  shape.frag  shape.vert
