[package]
name = "narwhal"
version = "0.1.0"
authors = ["cpsdqs <cpsdqs@gmail.com>"]
edition = "2018"

[dependencies]
cgmath = "0.16"
euclid = "0.19"
failure = "0.1"
failure_derive = "0.1"
fnv = "1.0"
half = "1.3"
lazy_static = "1.2"
lyon = "0.11"
log = "0.4"
lcms-prime = { git = "https://github.com/cpsdqs/lcms-prime" }
narwhal_platform = { path = "platform" }
vulkano = "0.11"
vulkano-shaders = "0.11"

[workspace]
