[package]
name = "narwhal_platform"
version = "0.1.0"
authors = ["cpsdqs <cpsdqs@gmail.com>"]
edition = "2018"

[dependencies]
cgmath = "0.16"
vulkano = "0.11"
log = "0.4"
lazy_static = "1.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.18"
objc = "0.2"
vk-sys = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
wayland-client = "0.21"
wayland-protocols = { version = "0.21", features = ["client"] }
smithay-client-toolkit = "0.4"
